@@ -3,7 +3,8 @@
 *******************************************************************************
 
 === 1.0.16 ===
-* Added LoudnessMeter tool.
+* Added AutoGain module.
+* Added LoudnessMeter module.
 * Added broadcasting-related constants according to BS.1770-4 and BS.2051-3 specificaitons.
 * Fixed band binding algorithm for dspu::FFTCrossover.
 
